Add current job, proper header section

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -151,3 +151,14 @@ social-icons {
   display: table;
   clear: both;
 }
+
+.social {
+  padding-top: 1.2em;
+}
+
+.header {
+  h4 {
+    margin-top: 0em;
+    margin-bottom: 0em;
+  }
+}
