--- a/app/globals.css
+++ b/app/globals.css
@@ -37,18 +37,20 @@
 
 @layer utilities {
 
-  /* This utility extends the hover/click area by 3px on all sides */
+  /* This utility extends the hover/click area on all sides */
   .hover-expand {
     position: relative;
+    --hover-radius: -10px;
   }
 
   .hover-expand::before {
     content: "";
     position: absolute;
-    top: -10px;
-    left: -10px;
-    right: -10px;
-    bottom: -10px;
+    top: var(--hover-radius);
+    left: var(--hover-radius);
+    right: var(--hover-radius);
+    bottom: var(--hover-radius);
+
     /* By not setting background or borders, this pseudo–element is invisible,
        but because it’s part of the element’s subtree, hovering over it
        triggers the parent’s :hover state. */
