--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@
 :root {
   * {
     cursor: default;
+    letter-spacing: -0.01em;
   }
 
   /* Opt text-based inputs out of "forced" default cursor */
@@ -30,12 +31,13 @@
   }
 
   /* A CSS media query to target mobile devices */
-  @media (max-width: 640px) {
+  @media (max-width: 639px) {
     font-size: 14px;
   }
 }
 
 @layer utilities {
+
   /* This utility extends the hover/click area on all sides */
   .hover-expand {
     position: relative;
