--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,9 @@
 @import "@radix-ui/colors/lime.css";
 @import "@radix-ui/colors/lime-dark.css";
 
+@import "../lib/styles/highlight-js/github.css";
+@import "../lib/styles/highlight-js/github-dark.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -50,6 +53,23 @@
     left: var(--hover-radius);
     right: var(--hover-radius);
     bottom: var(--hover-radius);
+
+    /* By not setting background or borders, this pseudo–element is invisible,
+       but because it’s part of the element’s subtree, hovering over it
+       triggers the parent’s :hover state. */
+    pointer-events: auto;
+  }
+
+  .hover-expand-x {
+    position: relative;
+    --hover-radius: -10px;
+  }
+
+  .hover-expand-x::before {
+    content: "";
+    position: absolute;
+    left: var(--hover-radius);
+    right: var(--hover-radius);
 
     /* By not setting background or borders, this pseudo–element is invisible,
        but because it’s part of the element’s subtree, hovering over it
