feat: 2025 - full redesign (#4)
* Reset

* Biome setup, fonts (inter + berkeley mono)

* Formatting

* More progress

* Switch to Bun for package manager

* Updates

* Done

* Clearance after last section

* Add metadata

* Updates!

* Add dark mode switch, toolbar

* Add status icons, legend (responsive)

* Formatting

* Progress on 404 page, add browse for projects

* Cleanup

* Cleanup

* Progress on projects view

* Remove project status from index, fix spacing between status and project name on project page

* Fade out projects header and desc when hovering projects

* Smooth layout transition for video preview

* Cleanup animation for projects view

* Hide project URL on mobile

* Stretch video preview width to screen edge

* Improve browse projects link

---------

Co-authored-by: Kian Bazza <kianbazza@Kians-MacBook-Pro.local>

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,90 +1,59 @@
+@import "@radix-ui/colors/gray.css";
+@import "@radix-ui/colors/gray-dark.css";
+@import "@radix-ui/colors/sand.css";
+@import "@radix-ui/colors/sand-dark.css";
+@import "@radix-ui/colors/red.css";
+@import "@radix-ui/colors/red-dark.css";
+@import "@radix-ui/colors/plum.css";
+@import "@radix-ui/colors/plum-dark.css";
+@import "@radix-ui/colors/blue.css";
+@import "@radix-ui/colors/blue-dark.css";
+@import "@radix-ui/colors/lime.css";
+@import "@radix-ui/colors/lime-dark.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
-
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 10% 3.9%;
-
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
-
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
-  }
-}
-
-@layer base {
+:root {
   * {
-    @apply border-border;
+    cursor: default;
+    letter-spacing: -0.01em;
   }
-  body {
-    @apply bg-background text-foreground;
+
+  /* Opt text-based inputs out of "forced" default cursor */
+  input[type="text"],
+  input[type="password"],
+  input[type="email"],
+  textarea,
+  select {
+    cursor: text;
+  }
+
+  /* A CSS media query to target mobile devices */
+  @media (max-width: 639px) {
+    font-size: 14px;
   }
 }
 
-@layer base {
-  :root {
-    @apply text-base sm:text-lg;
+@layer utilities {
+  /* This utility extends the hover/click area on all sides */
+  .hover-expand {
+    position: relative;
+    --hover-radius: -10px;
   }
 
-  body {
-    @apply font-sans;
-  }
+  .hover-expand::before {
+    content: "";
+    position: absolute;
+    top: var(--hover-radius);
+    left: var(--hover-radius);
+    right: var(--hover-radius);
+    bottom: var(--hover-radius);
 
-  .debug {
-    @apply border border-red-500;
+    /* By not setting background or borders, this pseudo–element is invisible,
+       but because it’s part of the element’s subtree, hovering over it
+       triggers the parent’s :hover state. */
+    pointer-events: auto;
   }
 }
