add hover for links, add links for projects

--- a/app/globals.css
+++ b/app/globals.css
@@ -101,6 +101,11 @@
 
   --color-background: var(--sand-1);
   --color-foreground: var(--sand-12);
+
+  --color-text-primary: var(--sand-12);
+  --color-text-secondary: var(--sand-11);
+  --color-text-tertiary: var(--sand-10);
+  --color-text-quaternary: var(--sand-9);
 }
 
 /*
@@ -121,10 +126,12 @@
   }
 }
 
-@utility hover-expand {
-  /* This utility extends the hover/click area on all sides */
+/* This utility extends the hover/click area on all sides */
+@utility hover-expand-* {
   position: relative;
-  --hover-radius: -10px;
+
+  --hover-radius: --spacing(--value(integer) * -1);
+  --hover-radius: calc(--value([*]) * -1);
 
   &::before {
     content: "";
@@ -133,10 +140,9 @@
     left: var(--hover-radius);
     right: var(--hover-radius);
     bottom: var(--hover-radius);
-
-    /* By not setting background or borders, this pseudo–element is invisible,
-       but because it’s part of the element’s subtree, hovering over it
-       triggers the parent’s :hover state. */
+    /* By not setting background or borders, this pseudo-element is invisible,
+       but because it's part of the element's subtree, hovering over it
+       triggers the parent's :hover state. */
     pointer-events: auto;
   }
 }
