--- a/app/globals.css
+++ b/app/globals.css
@@ -166,6 +166,9 @@
 
     a {
       cursor: pointer;
+      & * {
+        cursor: pointer;
+      }
     }
 
     /* A CSS media query to target mobile devices */
