--- a/app/globals.css
+++ b/app/globals.css
@@ -131,23 +131,27 @@
   }
 }
 
-/* @layer base { */
-/*   html.light { */
-/*     code[data-theme], */
-/*     code[data-theme] span { */
-/*       color: var(--shiki-light); */
-/*       background-color: var(--shiki-light-bg); */
-/*     } */
-/*   } */
-/**/
-/*   html.dark { */
-/*     code[data-theme]:not([data-highlighted-line]), */
-/*     code[data-theme]:not([data-highlighted-line]) span { */
-/*       color: var(--shiki-dark); */
-/*       background-color: var(--shiki-dark-bg); */
-/*     } */
-/*   } */
-/* } */
+@layer base {
+  html.light .shiki,
+  html.light .shiki span {
+    color: var(--shiki-light) !important;
+    /* background-color: var(--shiki-dark-bg) !important; */
+    /* Optional, if you also want font styles */
+    font-style: var(--shiki-light-font-style) !important;
+    font-weight: var(--shiki-light-font-weight) !important;
+    text-decoration: var(--shiki-light-text-decoration) !important;
+  }
+
+  html.dark .shiki,
+  html.dark .shiki span {
+    color: var(--shiki-dark) !important;
+    /* background-color: var(--shiki-dark-bg) !important; */
+    /* Optional, if you also want font styles */
+    font-style: var(--shiki-dark-font-style) !important;
+    font-weight: var(--shiki-dark-font-weight) !important;
+    text-decoration: var(--shiki-dark-text-decoration) !important;
+  }
+}
 
 /* This utility extends the hover/click area on all sides */
 @utility hover-expand-* {
